# mordle

./: .gitignore  README.md  noxfile.py  setup.cfg
.github/workflows/: lint.yml  tests.yml
mordle/: console.py  corpus.py  distribution.py  game.py  patterns.py  player.py
mordle/backend/: main.py  store.py
mordle/data/: entropies.json  past-answers.txt
tests/: test_patterns.py  test_player.py
