[metadata]
name = mordle
author = Omar Sosa Rodriguez
author_email = omarfsosa@gmail.com
description = Short description goes here
version = attr: mordle.__version__
url = https://github.com//mordle
keywords =
  # science
  # machine learning
  # something else
license_files =
  LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  click
  # numpy
  # pandas
  # what else
include_package_data = True
[options.extras_require]
test =
  pytest
  flake8
  # mypy
dev =
  black
  flake8
  isort
  nox
docs = 
  # sphinx maybe?
[options.entry_points]
console_scripts =
  wordle = mordle.console:wordle
[options.package_data]
mordle =
  *.txt
  *.json
